Fix the shifted side (#357)

--- a/src/adapters/gitlab.less
+++ b/src/adapters/gitlab.less
@@ -15,6 +15,11 @@
 
   .content-wrapper {
     transition-duration: 0.3s;
+    margin-top: 0;
+  }
+
+  .layout-nav {
+    position: static;
   }
 }
 
